fixed layout issues when searching for products

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -151,3 +151,18 @@ body {
 .product-container{
   margin: 10px auto;
 }
+
+.searchResult {
+  min-width: min-content;
+}
+
+.imageSection{
+  height: 230px;
+}
+.cardContent{
+  display: flex;
+  flex-wrap: wrap;
+}
+.cardPrice{
+align-self: flex-end;
+}
